# ai-avatar-saas

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  package-lock.json  package.json  playwright.config.ts
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio_capture.rs  audio_player.rs  frame_server.rs  local_stt.rs  main.rs  obs_manager.rs  obs_virtual_cam.rs  set_default_cam.ps1  set_default_mic.ps1  stt.rs  stt_client.rs  vad.rs  virtual_camera.rs  websocket_client.rs
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/__tests__/: auth.test.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: Layout.tsx  Toast.tsx
apps/web/lib/: api.ts  utils.ts
infrastructure/docker/: Dockerfile.ai  Dockerfile.gateway  Dockerfile.web
infrastructure/scripts/: health-check.sh
services/ai/: .env.example  requirements.txt
services/ai/avatar_service/: liveportrait_handler.py  main.py  wav2lip_handler.py
services/ai/gpu_service/: Dockerfile  cosyvoice_handler.py  edge_tts_handler.py  main.py  musetalk_handler.py  requirements.txt  setup.sh  (+2 more)
services/gateway/: .env.example  Dockerfile  go.mod  go.sum
tests/: fixtures.ts
tests/api/: 01-health.spec.ts  02-auth.spec.ts  03-avatar.spec.ts  04-personality.spec.ts  05-session.spec.ts  06-billing.spec.ts
tests/e2e/: 01-register-login.spec.ts
(+48 files in other folders)
