[package]
name = "ai-avatar-desktop"
version = "0.1.0"
edition = "2021"
description = "AI Avatar SaaS 桌面應用程式"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
whisper-rs = "0.12"
cpal = "0.15"  # 音訊捕捉
hound = "3.5"  # WAV 檔案處理
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
